--- a/css/common.css
+++ b/css/common.css
@@ -5,6 +5,16 @@
 /* вторичный фон #F5F4FA */
 /* цвет лого #000000 */
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 :root {
   --primary-text-color: #757575;
   --title-text-color: #212121;
@@ -13,6 +23,8 @@
   --secondary-bg-color: #f5f4fa;
   --footer-link-color: rgba(255, 255, 255, 0.6);
 }
+
+/* Остальной код */
 /* font-family: 'Raleway', sans-serif;
 font-family: 'Roboto', sans-serif; */
 body {
@@ -27,28 +39,67 @@ body {
 
 /* button */
 .button {
+  display: inline-block;
+
+  border-radius: 4px;
+  border: none;
+  padding: 10px 32px;
+  min-width: 200px;
+
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+  border-color: transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-  font-family: inherit;
+  align-items: center;
+  text-align: center;
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+}
 
-  align-items: center;
-  text-align: center;
+.button.sub {
+  padding-top: 10px;
+  padding-right: 28px;
+  padding-bottom: 10px;
+  padding-left: 28px;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  outline: 2px solid tomato;
 }
 
 /* утилита */
 .list {
   list-style: none;
+  padding: 0;
+  margin: 0;
+}
+/* прячем заголовок */
+.is-hidden {
+  display: none;
+}
+
+/* шапка */
+/* .header-nav {
+  padding-top: 24px;
+  padding-bottom: 25px;
+} */
+
+.main-nav {
+  display: flex;
+  align-items: center;
 }
 
 /* логотип */
 .logo {
   color: #000000;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -64,7 +115,24 @@ body {
   color: var(--accent-color);
 }
 /* .site-nav */
+.site-nav {
+  display: flex;
+  margin-left: 85px;
+}
+/* .site-nav .item:not(:last-child) {
+  margin-right: 50px;
+} */
+
+.site-nav .item + .item {
+  margin-left: 50px;
+}
+
 .site-nav .link {
+  display: block;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--title-text-color);
 
   font-weight: 500;
@@ -81,7 +149,24 @@ body {
   color: var(--accent-color);
 }
 /* add-header */
+
+.add-header {
+  display: flex;
+  margin-left: auto;
+}
+
+.add-header .item + .item {
+  margin-left: 30px;
+}
+/* .add-header .item:not(:last-child) {
+  margin-right: 30px;
+  
+} */
+
 .add-header .link {
+  display: block;
+  /* padding-top: 32px;
+  padding-bottom: 32px; */
   color: var(--primary-text-color);
 
   font-weight: 500;
@@ -97,6 +182,8 @@ body {
 /*footer*/
 .footer {
   background-color: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .footer .logo {
   color: var(--primary-white-color);
@@ -108,6 +195,9 @@ body {
 address p {
   color: var(--primary-white-color);
   font-style: normal;
+
+  margin-top: 20px;
+  margin-bottom: 9px;
 }
 address a {
   color: var(--footer-link-color);
@@ -137,17 +227,36 @@ address a {
 /* main index */
 
 /* hero */
+.hero {
+  text-align: center;
+}
+
 .hero-title {
   color: var(--primary-white-color);
 
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
+
   letter-spacing: 0.06em;
   text-transform: uppercase;
+
+  margin-top: 0;
+  margin-bottom: 30px;
+
+  background-color: yellow;
 }
+
 /* sectoin */
+.section:not(.features) {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  outline: 2px solid tomato;
+}
+.section.features {
+  padding-top: 94px;
+}
+
 .section-title {
   color: var(--title-text-color);
 
@@ -155,7 +264,24 @@ address a {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+
+  margin-top: 0;
+  margin-bottom: 50px;
 }
+
+/* features*/
+
+.features-list {
+  display: flex;
+}
+.features-list .item {
+  width: 270px;
+  background-color: tomato;
+}
+.features-list .item + .item {
+  margin-left: 30px;
+}
+
 .features-list .title {
   font-weight: 700;
   font-size: 14px;
@@ -164,6 +290,12 @@ address a {
 }
 .features-list .title {
   color: var(--title-text-color);
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.features-list p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 /* work  */
@@ -177,6 +309,8 @@ address a {
   text-align: center;
 
   text-transform: uppercase;
+
+  margin: 0;
 }
 
 /* team  */
@@ -193,7 +327,9 @@ address a {
   font-size: 14px;
   line-height: 1.14;
   text-align: center;
-  text-transform: uppercase;
+
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 .team .text {
   font-weight: 400;
@@ -201,6 +337,9 @@ address a {
   line-height: 1.19;
 
   text-align: center;
+
+  margin-top: 0;
+  margin-bottom: 16px;
 }
 .team .social-icons {
   background-color: var(--primary-white-color);
@@ -217,8 +356,17 @@ address a {
 }
 
 /* portfolio main */
+.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  outline: 2px solid tomato;
+}
 
-.portfilio .filter {
+.portfolio .filter {
+  border-radius: 4px;
+  border: none;
+  padding: 6px 22px;
+
   color: var(--title-text-color);
   background-color: var(--secondary-bg-color);
   font-family: inherit;
@@ -229,10 +377,12 @@ address a {
   text-align: center;
   letter-spacing: 0.03em;
 }
-.portfilio .filter:hover,
-.portfilio .filter:focus {
+.portfolio .filter:hover,
+.portfolio .filter:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 
 .projects {
@@ -242,6 +392,9 @@ address a {
 .projects-link a {
   color: inherit;
   text-decoration: none;
+}
+.projects .text {
+  padding: 20px 24px;
 }
 
 /* не ховерится картинка */
@@ -258,10 +411,14 @@ address a {
 
   letter-spacing: 0.06em;
   text-decoration: none;
+
+  margin-top: 0;
+  margin-bottom: 4px;
 }
 
 .projects-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
+  margin: 0;
 }
