--- a/css/common.css
+++ b/css/common.css
@@ -82,6 +82,11 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.picture {
+  display: block;
+}
+
 /* прячем заголовок */
 .is-hidden {
   display: none;
@@ -372,7 +377,7 @@ address .link:not(:last-child) {
 }
 
 .work .item {
-  width: calc((100%-60px) / 3);
+  width: calc((100% - 60px) / 3);
 }
 
 .work .item:not(:last-child) {
@@ -382,9 +387,6 @@ address .link:not(:last-child) {
 /* .work .item + .item {
   margin-left: 30px;
 } */
-.work .picture {
-  display: block;
-}
 
 /* team  */
 .section.team {
@@ -405,13 +407,18 @@ address .link:not(:last-child) {
 }
 .team .list {
   display: flex;
+  flex-wrap: wrap-reverse;
 }
 
 .team .list-link {
   display: flex;
   justify-content: space-between;
 }
-.list-link .list-item:not(:last-child) {
+/* .list-link .list-item:not(:last-child) {
+  margin-right: 10px;
+} */
+
+.list-link .list-item:not(:nth-child(4n + 4)) {
   margin-right: 10px;
 }
 
@@ -423,9 +430,7 @@ address .link:not(:last-child) {
   height: 44px;
   background-color: turquoise;
 }
-.list .picture {
-  display: block;
-}
+
 .team .wrapper {
   padding-top: 30px;
   padding-right: 32px;
@@ -443,7 +448,8 @@ address .link:not(:last-child) {
   margin-bottom: 16px;
 }
 .team .social-icons {
-  width: 270px;
+  /* width: 270px; */
+  width: calc((100% - 30px * 3) / 4);
 
   background-color: var(--primary-white-color);
 }
@@ -463,7 +469,7 @@ address .link:not(:last-child) {
   /* justify-content: space-between; */
 }
 .customers .item {
-  width: calc((100%-150px) / 5);
+  width: calc((100% - 150px) / 5);
 }
 .customers .item + .item {
   margin-left: 30px;
@@ -482,7 +488,14 @@ address .link:not(:last-child) {
   padding-bottom: 94px;
   outline: 2px solid tomato;
 }
-
+.box-button {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.box-button .item + .item {
+  margin-left: 8px;
+}
 .portfolio .filter {
   border-radius: 4px;
   border: none;
@@ -510,6 +523,17 @@ address .link:not(:last-child) {
   font-size: 18px;
   line-height: 1.56;
 }
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.grid-item:not(:nth-child(3n + 3)) {
+  margin-right: 30px;
+}
+.grid-item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
+}
 .projects-link a {
   color: inherit;
   text-decoration: none;
@@ -525,16 +549,16 @@ address .link:not(:last-child) {
 } */
 
 .projects-title {
+  margin-top: 0;
+  margin-bottom: 4px;
+
   color: var(--title-text-color);
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-
   letter-spacing: 0.06em;
   text-decoration: none;
-
-  margin-top: 0;
-  margin-bottom: 4px;
 }
 
 .projects-text {
